@@ -1,15 +1,12 @@
 package hu.cubix.hr.zpalvolgyi.controller;
 
 import hu.cubix.hr.zpalvolgyi.dto.EmployeeDto;
-import hu.cubix.hr.zpalvolgyi.model.Employee;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/employees")
@@ -17,10 +14,11 @@ public class EmployeeController {
     private List<EmployeeDto> employees = new ArrayList<>();
 
     {
-        employees.add(new EmployeeDto(1L, "Accountant", 700, LocalDateTime.of(2020, 4, 10, 0, 0, 0)));
-        employees.add(new EmployeeDto(2L, "IT Specialist", 950, LocalDateTime.of(2017, 5, 11, 0, 0, 0)));
-        employees.add(new EmployeeDto(3L, "Network Architect", 1200, LocalDateTime.of(2007, 6, 12, 0, 0, 0)));
-        employees.add(new EmployeeDto(4L, "Sales Intern", 400, LocalDateTime.of(2023, 5, 3, 0, 0, 0)));
+        employees.add(new EmployeeDto(1L, "John","Accountant", 700, LocalDateTime.of(2020, 4, 10, 0, 0, 0)));
+        employees.add(new EmployeeDto(2L, "Mary","IT Specialist", 950, LocalDateTime.of(2017, 5, 11, 0, 0, 0)));
+        employees.add(new EmployeeDto(3L, "William","Network Architect", 1200, LocalDateTime.of(2007, 6, 12, 0, 0, 0)));
+        employees.add(new EmployeeDto(4L, "Jennifer","Sales Intern", 400, LocalDateTime.of(2022, 9, 3, 0, 0, 0)));
+        employees.add(new EmployeeDto(5L, "Michael","Global Manager", 1500, LocalDateTime.of(2016, 5, 3, 0, 0, 0)));
     }
 
     @GetMapping
@@ -74,6 +72,6 @@ public class EmployeeController {
 
     @GetMapping("/salaryGreaterThan/{salaryLimit}")
     public List<EmployeeDto> findBySalary(@PathVariable int salaryLimit) {
-        return employees.stream().filter(employeeDto1 -> employeeDto1.getSalary() > salaryLimit).collect(Collectors.toList());
+        return employees.stream().filter(employeeDto1 -> employeeDto1.getSalary() > salaryLimit).toList();
     }
 }
